--- a/apps/songify/src/app/home/home.component.html
+++ b/apps/songify/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="component-container">
+  <div class="list-component">
+    <songify-workspace-songs-list [songs]="songs" [readonly]="true"></songify-workspace-songs-list>
+  </div>
+</div>
