--- a/apps/songify/src/app/songs/songs-details/songs-details.component.html
+++ b/apps/songify/src/app/songs/songs-details/songs-details.component.html
@@ -1,1 +1,50 @@
-<p>songs-details works!</p>
+<mat-card>
+
+  <mat-card-title>
+    <span *ngIf="currentSong.id; else elseBlock">
+      Editing song: {{ songTitle }}
+    </span>
+    <ng-template #elseBlock>Add a new song</ng-template>
+  </mat-card-title>
+
+  <form #form="ngForm" (submit)="saved.emit(currentSong)">
+
+    <mat-card-content>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Title"
+          [(ngModel)]="currentSong.title"
+          type="text"
+          name="title"
+          required
+        />
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Description"
+          [(ngModel)]="currentSong.description"
+          type="text"
+          name="description"
+          required
+        />
+      </mat-form-field>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button
+        [disabled]="form.invalid"
+        type="submit"
+        mat-raised-button
+        color="primary"
+      >
+        Save
+      </button>
+      <button type="button" mat-button (click)="form.reset(); cancelled.emit()">
+        Cancel
+      </button>
+    </mat-card-actions>
+  </form>
+
+</mat-card>
