--- a/apps/songify/src/app/app.component.html
+++ b/apps/songify/src/app/app.component.html
@@ -1,11 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>
-    <button data-cy="toggle-btn" mat-mini-fab (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-  </span>
-  <span class="spacer">Songify Nx App</span>
-</mat-toolbar>
+<songify-workspace-toolbar (sidenav)="sidenav.toggle()"></songify-workspace-toolbar>
 
 <mat-sidenav-container>
 
