NestJS Added as backend part of the project

--- a/apps/songify/src/app/songs/songs.component.html
+++ b/apps/songify/src/app/songs/songs.component.html
@@ -1,5 +1,5 @@
 <songify-workspace-songs-list
-  [songs]="songs"
+  [songs]="songs$ | async"
   (selected)="selectSong($event)"
   (deleted)="deleteSong($event)">
 </songify-workspace-songs-list>
